# gbe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  config.h.in  gbe.sln  gbe.vcxproj  gbe.vcxproj.filters
CMakeModules/: FindFreeImage.cmake  FindPCRE.cmake  FindSDL2.cmake
android/app/: build.gradle
android/app/src/main/: .gitignore  AndroidManifest.xml
android/app/src/main/java/com/example/user/gbe/: AppCompatPreferenceActivity.java  CartridgeInfo.java  CartridgeInfoException.java  EditGameSearchDirectoriesActivity.java  GBDisplayView.java  GBSystem.java  GBSystemException.java  GameActivity.java  GameListActivity.java  GameListAdapter.java  SaveStateManager.java  SettingsActivity.java
android/app/src/main/jni/: Android.mk  Application.mk  GBSystem_jni.cpp
android/app/src/main/res/layout/: activity_edit_game_search_directories.xml  activity_game.xml  activity_game_list.xml  content_edit_game_search_directories.xml  content_game_list.xml  game_list_item.xml
android/app/src/main/res/menu/: menu_editsearchpath_context.xml  menu_game.xml  menu_game_list.xml  menu_game_list_popup.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: pref_general.xml  pref_headers.xml
android/app/src/test/java/com/example/user/gbe/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
dep/: Gb_Snd_Emu.vcxproj  Gb_Snd_Emu.vcxproj.filters  YBaseLib.vcxproj  YBaseLib.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters  hqx.vcxproj  hqx.vcxproj.filters  imgui.vcxproj  imgui.vcxproj.filters
dep/Gb_Snd_Emu/: Gb_Oscs.h  blargg_config.h
dep/glad/src/: glad.c
dep/hqx/src/: hqx.h
dep/win/lib32/: SDL2.lib  SDL2main.lib
dep/win/lib32-debug/: SDL2.lib  SDL2main.lib
src/: audio.cpp  audio.h  audio_buffer.cpp  audio_buffer.h  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  cpu_disasm.cpp  cpu_instruction_table.cpp  cpu_instructions.cpp  display.cpp  display.h  imgui_impl.cpp  imgui_impl.h  jit_base.cpp  jit_base.h  jit_table.cpp  jit_table.h  jit_x86.cpp  jit_x86.h  link.cpp  link.h  main.cpp  serial.cpp  serial.h  structures.cpp  structures.h  system.cpp  system.h  system_link.cpp
